[package]
name = "lbt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
dirs = "5.0.1"
lazy_static = "1.5.0"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
spinoff = "0.8.0"
strum = { version = "0.26.3", features = ["strum_macros", "derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
zip = "2.2.0"
